# pptk

./: LICENSE  README.md  pyproject.toml
src/models/: __init__.py  presentation.py  slide.py
src/pptk/models/: __init__.py  presentation.py  presentation_settings.py  slide.py
src/pptk/services/: __init__.py  presentation_service.py  presentation_service_test.py
src/services/: __init__.py  presentation_service.py  presentation_service_test.py
