[tool.poetry]
name = "pptk"
version = "0.1.0"
description = "Powerpoint Karaoké presentation generator"
authors = ["Gregory Le Garec <gregory.legarec@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
